seperated the verification journey code from reset and added a fix to a styling issue to the unmask password button on small screen devices

--- a/src/Accounts/Resources/Styles/modules.less
+++ b/src/Accounts/Resources/Styles/modules.less
@@ -160,10 +160,8 @@ input#password[type="text"] + .unmask { background-position: 0 -45px;}
     span { margin-left: 10px; }
     p { margin:5px 0 5px 10px; }
   }
-}
 
 /* LAYOUT */
-@media screen and (max-width: 700px ) {
   body.row { width: 100%;}
 
   .container {
@@ -193,6 +191,8 @@ input#password[type="text"] + .unmask { background-position: 0 -45px;}
   .timer-wrap {
     margin: 15px 0 15px 20%;
   }
+
+  .unmask { top:24px; }
 
   .icon.email, .icon.phone { display: none;}
   .icon-text, .input.label-heading { margin:0; font-size: 0.9em; }
